--- a/Chatbot-UI/Dockerfile
+++ b/Chatbot-UI/Dockerfile
@@ -1,9 +1,11 @@
+# Sử dụng hình ảnh nginx:latest
 FROM nginx:latest
-COPY . /usr/share/nginx/html
+
+# Sao chép các tệp HTML vào thư mục của Nginx
+COPY ./Chatbot-UI /usr/share/nginx/html
+
 # Expose port 80 (port mặc định của Nginx)
 EXPOSE 80
 
 # Khởi động Nginx
 CMD ["nginx", "-g", "daemon off;"]
-
-#docker build -t html-server-image:v1 .
