--- a/rasa-app-data/data/rules.yml
+++ b/rasa-app-data/data/rules.yml
@@ -1,43 +1,232 @@
-version: "2.0"
-
+version: '3.1'
 rules:
 
-- rule: Say goodbye anytime the user says goodbye
+- rule: Hỏi hủy hóa đơn
+  steps:
+  - intent: huy_hd
+  - action: utter_huy_hd
+
+- rule: Hỏi vệ sinh
+  steps:
+  - intent: ve_sinh
+  - action: utter_ve_sinh
+
+- rule: Kiểm tra sảm phẩm lỗi
+  steps:
+  - intent: kiem_tra
+  - action: utter_kiem_tra
+
+- rule: Hỏi sản phẩm
+  # - rule: Hỏi còn sản phẩm 
+  #   steps:
+  #   - intent: san_pham_tb
+  #   - action: utter_san_pham_tb
+
+  steps:
+  - intent: san_pham
+  - action: utter_san_pham
+
+- rule: Hỏi kết nối với chăm sóc khách hàng
+  steps:
+  - intent: contact_cskh
+  - action: utter_contact_cskh
+
+- rule: Hỏi đổi trả
+  steps:
+  - intent: doi_tra
+  - action: utter_doi_tra
+
+- rule: Báo lỗi sản phẩm
+  steps:
+  - intent: bao_loi
+  - action: utter_bao_loi
+
+- rule: Hỏi mua lại SSD cũ
+  steps:
+  - intent: mua_lai_ssd_cu
+  - action: utter_mua_lai_ssd_cu
+
+- rule: Hỏi Lắp đặt
+  steps:
+  - intent: lap_dat
+  - action: utter_lap_dat
+
+- rule: Hỏi Thời gian giao vận
+  steps:
+  - intent: thoi_gian_giao_van
+  - action: utter_thoi_gian_giao_van
+
+- rule: Hỏi bảo hành
+  steps:
+  - intent: bao_hanh
+  - action: utter_bao_hanh
+
+- rule: Hỏi hóa đơn
+  steps:
+  - intent: lay_hoa_don
+  - action: utter_lay_hoa_don
+
+- rule: Hỏi nhân viên kinh doanh
+  steps:
+  - intent: contact_nvkd
+  - action: utter_contact_nvkd
+
+- rule: Hỏi trả góp
+  steps:
+  - intent: tra_gop
+  - action: utter_tra_gop
+
+- rule: Hỏi phầm mềm
+  steps:
+  - intent: phan_mem
+  - action: utter_phan_mem
+
+- rule: Hỏi window bản quyền
+  steps:
+  - intent: phan_mem_windows
+  - action: utter_phan_mem_windows
+
+- rule: Hỏi địa chỉ ship hàng
+  steps:
+  - intent: dia_chi_ship
+  - action: utter_dia_chi_ship
+
+- rule: Hỏi đặt lại mật khẩu
+  steps:
+  - intent: dat_lai_mk
+  - action: utter_dat_lai_mk
+
+- rule: Hỏi theo dõi đơn
+  steps:
+  - intent: theo_doi_don
+  - action: utter_theo_doi_don
+
+- rule: Tạm biệt
   steps:
   - intent: goodbye
   - action: utter_goodbye
 
-- rule: Say 'I am a bot' anytime the user challenges
+- rule: Hỏi đặt hàng
   steps:
-  - intent: bot_challenge
-  - action: utter_iamabot
+  - intent: dat_hang
+  - action: utter_dat_hang
 
-- rule: Hỏi vệ sinh
+- rule: Hỏi khuyến mãi
   steps:
-  - intent: vesinh
-  - action: utter_vesinh
+  - intent: khuyen_mai
+  - action: utter_khuyen_mai
 
-- rule: Hỏi vệ sinh destop
+- rule: Hỏi laptop
   steps:
-  - intent: vesinhmtvp
-  - action: utter_vesinhmtvp
+  - intent: san_pham_laptop
+  - action: utter_san_pham_laptop
+
+- rule: Hỏi ram
+  steps:
+  - intent: san_pham_ram
+  - action: utter_san_pham_ram
+
+- rule: Hỏi man hình
+  steps:
+  - intent: san_pham_man_hinh
+  - action: utter_san_pham_man_hinh
+
+- rule: Hỏi PC
+  steps:
+  - intent: san_pham_PC
+  - action: utter_san_pham_PC
+
+- rule: Hỏi card
+  steps:
+  - intent: san_pham_card
+  - action: utter_san_pham_card
+
+- rule: Hỏi sản phẩm chơi game
+  steps:
+  - intent: san_pham_game
+  - action: utter_san_pham_game
+
+- rule: Hỏi camera an ninh
+  steps:
+  - intent: san_pham_camera
+  - action: utter_san_pham_camera
+
+- rule: Hỏi webcam
+  steps:
+  - intent: san_pham_webcam
+  - action: utter_san_pham_webcam
+
+- rule: Hỏi wifi
+  steps:
+  - intent: san_pham_wifi
+  - action: utter_san_pham_wifi
+
+- rule: Hỏi ghế
+  steps:
+  - intent: san_pham_ghe
+  - action: utter_san_pham_ghe
+
+- rule: Hỏi ổ cứng
+  steps:
+  - intent: san_pham_o_cung
+  - action: utter_san_pham_o_cung
+
+- rule: Hỏi vỏ case
+  steps:
+  - intent: san_pham_case
+  - action: utter_san_pham_case
+
+- rule: Hỏi linh kiện
+  steps:
+  - intent: san_pham_linh_kien
+  - action: utter_san_pham_linh_kien
+
+- rule: Hỏi tai nghe
+  steps:
+  - intent: san_pham_tai_nghe
+  - action: utter_san_pham_tai_nghe
+
+- rule: Hỏi chuột máy tính
+  steps:
+  - intent: san_pham_chuot
+  - action: utter_san_pham_chuot
+
+- rule: Hỏi vệ sinh máy tính văn phòng
+  steps:
+  - intent: ve_sinh_mtvp
+  - action: utter_ve_sinh_mtvp
 
 - rule: Hỏi vệ sinh server
   steps:
-  - intent: vesinhserver
-  - action: utter_vesinhserver
+  - intent: ve_sinh_server
+  - action: utter_ve_sinh_server
 
-- rule: Hỏi sp
+- rule: Tôi là rô bốt
   steps:
-  - intent: sanpham
-  - action: utter_sanpham
+  - intent: iamabot
+  - action: utter_iamabot
 
-- rule: Hỏi bảo hành
+- rule: Happy
   steps:
-  - intent: baohanh
-  - action: utter_baohanh
+  - intent: happy
+  - action: utter_happy
 
-- rule: location
+- rule: Xin chào
+  steps:
+  - intent: greet
+  - action: utter_greet
+
+- rule: Hỏi địa chỉ
   steps:
   - intent: location
   - action: utter_location
+
+- rule: Hỏi phí giao hàng
+  steps:
+  - intent: phi_giao_hang
+  - action: utter_phi_giao_hang
+
+- rule: Hỏi hỗ trợ khác
+  steps:
+  - intent: ho_tro_khac
+  - action: utter_ho_tro_khac
