--- a/rasa-app-data/data/stories.yml
+++ b/rasa-app-data/data/stories.yml
@@ -1,56 +1,290 @@
-version: "2.0"
+# version: "2.0"
+
+# stories:
+
+# - story: hoi sp
+#   steps:
+#   - intent: sanpham
+#   - action: utter_sanpham
+
+# - story: hoi bh
+#   steps:
+#   - intent: baohanh
+#   - action: utter_baohanh
+
+# - story: hoi vs laptop
+#   steps:
+#   - intent: vesinh
+#   - action: utter_vesinh
+
+# - story: hoi vs destop
+#   steps:
+#   - intent: vesinhmtvp
+#   - action: utter_vesinhmtvp
+
+# - story: hoi vs server
+#   steps:
+#   - intent: vesinhserver
+#   - action: utter_vesinhserver
+
+# - story: happy path
+#   steps:
+#   - intent: greet
+#   - action: utter_greet
+#   - intent: mood_great
+#   - action: utter_happy
+
+# - story: sad path 1
+#   steps:
+#   - intent: greet
+#   - action: utter_greet
+#   - intent: mood_unhappy
+#   - action: utter_cheer_up
+#   - action: utter_did_that_help
+#   - intent: affirm
+#   - action: utter_happy
+
+# - story: sad path 2
+#   steps:
+#   - intent: greet
+#   - action: utter_greet
+#   - intent: mood_unhappy
+#   - action: utter_cheer_up
+#   - action: utter_did_that_help
+#   - intent: deny
+#   - action: utter_goodbye
+
+
+version: "3.1"
 
 stories:
 
-- story: hoi sp
+- story: Hỏi hủy hóa đơn
   steps:
-  - intent: sanpham
-  - action: utter_sanpham
+  - intent: huy_hd
+  - action: utter_huy_hd
 
-- story: hoi bh
+- story: Hỏi vệ sinh
   steps:
-  - intent: baohanh
-  - action: utter_baohanh
+  - intent: ve_sinh
+  - action: utter_ve_sinh
 
-- story: hoi vs laptop
+- story: Kiểm tra sảm phẩm lỗi
   steps:
-  - intent: vesinh
-  - action: utter_vesinh
+  - intent: kiem_tra
+  - action: utter_kiem_tra
 
-- story: hoi vs destop
+- story: Hỏi sản phẩm
+  # - story: Hỏi còn sản phẩm 
+  #   steps:
+  #   - intent: san_pham_tb
+  #   - action: utter_san_pham_tb
+
   steps:
-  - intent: vesinhmtvp
-  - action: utter_vesinhmtvp
+  - intent: san_pham
+  - action: utter_san_pham
 
-- story: hoi vs server
+- story: Hỏi kết nối với chăm sóc khách hàng
   steps:
-  - intent: vesinhserver
-  - action: utter_vesinhserver
+  - intent: contact_cskh
+  - action: utter_contact_cskh
 
-
-- story: happy path
+- story: Hỏi đổi trả
   steps:
-  - intent: greet
-  - action: utter_greet
-  - intent: mood_great
-  - action: utter_happy
+  - intent: doi_tra
+  - action: utter_doi_tra
 
-- story: sad path 1
+- story: Báo lỗi sản phẩm
   steps:
-  - intent: greet
-  - action: utter_greet
-  - intent: mood_unhappy
-  - action: utter_cheer_up
-  - action: utter_did_that_help
-  - intent: affirm
-  - action: utter_happy
+  - intent: bao_loi
+  - action: utter_bao_loi
 
-- story: sad path 2
+- story: Hỏi mua lại SSD cũ
   steps:
-  - intent: greet
-  - action: utter_greet
-  - intent: mood_unhappy
-  - action: utter_cheer_up
-  - action: utter_did_that_help
-  - intent: deny
+  - intent: mua_lai_ssd_cu
+  - action: utter_mua_lai_ssd_cu
+
+- story: Hỏi Lắp đặt
+  steps:
+  - intent: lap_dat
+  - action: utter_lap_dat
+
+- story: Hỏi Thời gian giao vận
+  steps:
+  - intent: thoi_gian_giao_van
+  - action: utter_thoi_gian_giao_van
+
+- story: Hỏi bảo hành
+  steps:
+  - intent: bao_hanh
+  - action: utter_bao_hanh
+
+- story: Hỏi hóa đơn
+  steps:
+  - intent: lay_hoa_don
+  - action: utter_lay_hoa_don
+
+- story: Hỏi nhân viên kinh doanh
+  steps:
+  - intent: contact_nvkd
+  - action: utter_contact_nvkd
+
+- story: Hỏi trả góp
+  steps:
+  - intent: tra_gop
+  - action: utter_tra_gop
+
+- story: Hỏi phầm mềm
+  steps:
+  - intent: phan_mem
+  - action: utter_phan_mem
+
+- story: Hỏi window bản quyền
+  steps:
+  - intent: phan_mem_windows
+  - action: utter_phan_mem_windows
+
+- story: Hỏi địa chỉ ship hàng
+  steps:
+  - intent: dia_chi_ship
+  - action: utter_dia_chi_ship
+
+- story: Hỏi đặt lại mật khẩu
+  steps:
+  - intent: dat_lai_mk
+  - action: utter_dat_lai_mk
+
+- story: Hỏi theo dõi đơn
+  steps:
+  - intent: theo_doi_don
+  - action: utter_theo_doi_don
+
+- story: Tạm biệt
+  steps:
+  - intent: goodbye
   - action: utter_goodbye
+
+- story: Hỏi đặt hàng
+  steps:
+  - intent: dat_hang
+  - action: utter_dat_hang
+
+- story: Hỏi khuyến mãi
+  steps:
+  - intent: khuyen_mai
+  - action: utter_khuyen_mai
+
+- story: Hỏi laptop
+  steps:
+  - intent: san_pham_laptop
+  - action: utter_san_pham_laptop
+
+- story: Hỏi ram
+  steps:
+  - intent: san_pham_ram
+  - action: utter_san_pham_ram
+
+- story: Hỏi man hình
+  steps:
+  - intent: san_pham_man_hinh
+  - action: utter_san_pham_man_hinh
+
+- story: Hỏi PC
+  steps:
+  - intent: san_pham_PC
+  - action: utter_san_pham_PC
+
+- story: Hỏi card
+  steps:
+  - intent: san_pham_card
+  - action: utter_san_pham_card
+
+- story: Hỏi sản phẩm chơi game
+  steps:
+  - intent: san_pham_game
+  - action: utter_san_pham_game
+
+- story: Hỏi camera an ninh
+  steps:
+  - intent: san_pham_camera
+  - action: utter_san_pham_camera
+
+- story: Hỏi webcam
+  steps:
+  - intent: san_pham_webcam
+  - action: utter_san_pham_webcam
+
+- story: Hỏi wifi
+  steps:
+  - intent: san_pham_wifi
+  - action: utter_san_pham_wifi
+
+- story: Hỏi ghế
+  steps:
+  - intent: san_pham_ghe
+  - action: utter_san_pham_ghe
+
+- story: Hỏi ổ cứng
+  steps:
+  - intent: san_pham_o_cung
+  - action: utter_san_pham_o_cung
+
+- story: Hỏi vỏ case
+  steps:
+  - intent: san_pham_case
+  - action: utter_san_pham_case
+
+- story: Hỏi linh kiện
+  steps:
+  - intent: san_pham_linh_kien
+  - action: utter_san_pham_linh_kien
+
+- story: Hỏi tai nghe
+  steps:
+  - intent: san_pham_tai_nghe
+  - action: utter_san_pham_tai_nghe
+
+- story: Hỏi chuột máy tính
+  steps:
+  - intent: san_pham_chuot
+  - action: utter_san_pham_chuot
+
+- story: Hỏi vệ sinh máy tính văn phòng
+  steps:
+  - intent: ve_sinh_mtvp
+  - action: utter_ve_sinh_mtvp
+
+- story: Hỏi vệ sinh server
+  steps:
+  - intent: ve_sinh_server
+  - action: utter_ve_sinh_server
+
+- story: Tôi là rô bốt
+  steps:
+  - intent: iamabot
+  - action: utter_iamabot
+
+- story: Happy
+  steps:
+  - intent: happy
+  - action: utter_happy
+
+- story: Xin chào
+  steps:
+  - intent: greet
+  - action: utter_greet
+
+- story: Hỏi địa chỉ
+  steps:
+  - intent: location
+  - action: utter_location
+
+- story: Hỏi phí giao hàng
+  steps:
+  - intent: phi_giao_hang
+  - action: utter_phi_giao_hang
+
+- story: Hỏi hỗ trợ khác
+  steps:
+  - intent: ho_tro_khac
+  - action: utter_ho_tro_khac
