--- a/rasa-app-data/endpoints.yml
+++ b/rasa-app-data/endpoints.yml
@@ -1,5 +1,10 @@
 action_endpoint:
-  url: http://localhost:5005/webhook
+  url: http://action_server:5055/webhook
 
 nlg:
   url: http://localhost:5005/nlg
+
+duckling:
+  url: http://duckling:8000
+  dimensions:
+  - time
