--- a/rasa-app-data/config.yml
+++ b/rasa-app-data/config.yml
@@ -1,30 +1,27 @@
 recipe: default.v1
-assistant_id: concert_bot
-language: en
+assistant_id: form_bot
+language: vi
 
 pipeline:
-- name: "WhitespaceTokenizer"
-- name: "RegexFeaturizer"
-- name: "LexicalSyntacticFeaturizer"
-- name: "CountVectorsFeaturizer"
-- name: "CountVectorsFeaturizer"
-  analyzer: "char_wb"
-  min_ngram: 1
-  max_ngram: 4
-- name: "DIETClassifier"
-  epochs: 100
-- name: FallbackClassifier
-  threshold: 0.4
-  ambiguity_threshold: 0.1
-- name: "EntitySynonymMapper"
+- name: WhitespaceTokenizer
+- name: LexicalSyntacticFeaturizer
+- name: CountVectorsFeaturizer
+  token_pattern: (?u)\b\w+\b
+- name: DucklingEntityExtractor
+  url: http://duckling:8000
+  dimensions:
+  - number
+- name: DIETClassifier
+  epochs: 1
+  run_eagerly: True
+- name: EntitySynonymMapper
+# - name: "rasa.shared.nlu.training_data.formats.openai.transformers_tokenizer.OpenAIAutoTokenizer"
+#   model_name: "vinai/phobert-base"
 
 policies:
 - name: TEDPolicy
-  max_history: 5
-  epochs: 200
-  batch_size: 50
-  max_training_samples: 300
-- name: MemoizationPolicy
+  epochs: 1
+- name: AugmentedMemoizationPolicy
 - name: RulePolicy
 cors:
   enabled: true
