--- a/rasa-setup/Dockerfile
+++ b/rasa-setup/Dockerfile
@@ -4,6 +4,11 @@ USER root
 # Tạo thư mục làm việc
 WORKDIR /app
 
+
+# Cài đặt các thư viện tiếng Việt (vd: spaCy, v.v.)
+# RUN pip install --upgrade pip
+# RUN pip install spacy
+# RUN python -m spacy download vi_core_news_sm
 # Sao chép tệp kịch bản vào container
 COPY /rasa-setup/start_rasa.sh /app
 
