--- a/rasa-app-data/endpoints.yml
+++ b/rasa-app-data/endpoints.yml
@@ -10,6 +10,6 @@ tracker_store:
   url: 192.168.3.130
   port: 6379
   db: 0
-  key_prefix: rasa-logs-
+  key_prefix: rasa
   # password: 
 # use_ssl: 
