--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,7 +56,7 @@ services:
     environment:
       - URL_CHATBOT=${URL_CHATBOT}
     depends_on:
-      - "rasa"
+      - "rasa-${NAME}"
 
 networks: {rasa-network: {driver: bridge}}
 #docker-compose --env-file .env.dev up -d
