--- a/docker-compose-p.yml
+++ b/docker-compose-p.yml
@@ -1,62 +1,62 @@
 version: '3.0'
 
 services:
-  rasa-dev:
+  rasa:
     build:
       context: .
       dockerfile: rasa-setup/Dockerfile
     container_name: rasa
-    networks: ['rasa-network-dev']
+    networks: ['rasa-network']
     ports:
-    - "${RASA_PORT}:5005"
+    - "5005:5005"
     volumes:
     - "./rasa-app-data/:/app/"
     command: ["run","-m models", "--enable-api", "--cors", "*", "--endpoints", "endpoints.yml"]
     user: root
     depends_on:
-      - action_server-dev
+      - action_server
 
 
-  action_server-dev:
-    container_name: action_server-dev
+  action_server:
+    container_name: action_server
     image: rasa/rasa-sdk:latest
-    networks: ['rasa-network-dev']
+    networks: ['rasa-network']
     ports:
-    - "${ACTION_SERVER}:5055"
+    - "5055:5055"
     volumes:
     - "./rasa-app-data/actions:/app/actions"
   duckling:
     container_name: duckling
     image: rasa/duckling:latest
-    networks: ['rasa-network-dev']
+    networks: ['rasa-network']
     ports:
-    - "${DUCKLING_PORT}:8000"
+    - "8000:8000"
 
-  rasa_train-dev:
-    container_name: rasa_train-dev
+  rasa_train:
+    container_name: rasa_train
     build:
       context: .
       dockerfile: rasa-setup/Dockerfile
-    networks: ['rasa-network-dev']
+    networks: ['rasa-network']
     volumes:
       - "./rasa-app-data:/app"
     command: "train"
     depends_on:
-      - "rasa-dev"
+      - "rasa"
 
 # vào bằng http
-  chatbot-ui-dev:
+  chatbot-ui:
     container_name: chatbot-ui
     build:
       context: .
       dockerfile: Chat-UI/Dockerfile
-    networks: ['rasa-network-dev']
+    networks: ['rasa-network']
     ports:
-      - "${CHATBOT_UI_PORT}:80"
+      - "5010:80"
     environment:
-      - URL_CHATBOT=${URL_CHATBOT}
+      - URL_CHATBOT=http://192.198.3.130:5005/
     depends_on:
-      - "rasa-dev"
+      - "rasa"
 
-networks: {rasa-network-dev: {driver: bridge}}
+networks: {rasa-network: {driver: bridge}}
 #docker-compose --env-file .env.dev up -d
